--- a/sql-server/docker-compose.yml
+++ b/sql-server/docker-compose.yml
@@ -14,8 +14,11 @@ services:
     ports:
       - "1433:1433"
     volumes:
-      - ./data:/var/opt/mssql/data
+      - sql-server:/var/opt/mssql/data
     environment:
-      SA_PASSWORD: "@docker@2021"
+      SA_PASSWORD: "@qwerty123#"
       ACCEPT_EULA: "Y"
 
+
+volumes:
+  sql-server:
